Wed Mar 21 09:26:38 2001  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/posix/socket.h:
          Added typedef of pace_socklen_t to int for Solaris 5.6. Thanks
          to Lu Yunhai <luyunhai@huawei.com> for this solution.

Mon Mar 19 16:56:47 2001  Luther Baker  <luther@cs.wustl.edu>

        * pace/win32/unistd.c:
        * pace/win32/unistd.inl:	
	* pace/win32/stdio.c:
	* pace/win32/time.inl:
          Removed ::MsvcFoo punctuation. Since PACE is a c-library,
	  it doesn't recognize this C++ism. (::)
	
	* pace/win32/unistd.h:
	  Added signature for pace_win32_read (needs to be visible
	  before unistd.inl).

Tue Mar 13 12:58:09 2001  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/win32/setjmp.inl:
          Removed function calls to setjmp and sigsetjmp since
          these are now macros.

        * pace/win32/stdio.c:
          Adding pace_win32_fseek function to support pace_fseek.

        * pace/win32/time.inl:
          Adding support for tzset for Windows.

        * pace/win32/unistd.c:
          Adding call to pace_win32_read function and cleaned up
          pace_write code.

        * pace/win32/unistd.inl:
          Adding pace_win32_read function to support pace_read.

Wed Feb 28 15:04:41 2001  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/posix/string.inl (pace_strtok_r):
          Added call to strtok_r for Lynx and SunOS since it is
          supported but PACE_HAS_REENTRANT doesn't get defined
          for them.

        * pace/posix/setjmp.inl:
        * pace/setjmp.h:
          Changed setjmp and sigsetjmp from functions to macros since
          the functions were causing warnings on linux (Red Hat 7).

        * include/makeinclude/rules.common.GNU:
          Added support for Solaris 8

Fri Feb  9 19:35:29 2001  Luther J Baker  <luther@cs.wustl.edu>

        * pace/config/compiler.h
        * pace/config/utility.h
        * pace/config/fcntl.h
        * pace/win32/mman.inl
        * pace/win32/pthread.h